<resources>
    <string name="app_name">FootballMatchSchedule</string>
    <string name="nextMatch">Next</string>
    <string name="favorites">Favorites</string>
    <string name="prefMatch">Pref</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dateMatch">Sat, 29 Nov 2010</string>
    <string name="shots">Shots</string>
    <string name="midlefield">Midlefield</string>
    <string name="forward">Forward</string>
    <string name="subtituties">Subtituties</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="hometeam">homeTeam</string>
    <string name="awayteam">awayTeam</string>
    <string name="goals">Goals</string>
    <string name="versus">VS</string>
    <string name="defense">Defense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="search">Search</string>
    <string name="time">20:20</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_kg">Height (Kg)</string>
    <string name="_60">60</string>
    <string name="_75">75</string>
    <string name="position">Center</string>
    <string name="description">Description</string>
    <string name="nameplayer">Oscar</string>
    <string name="teamName">Chelsea FC</string>
    <string name="year">2010</string>
    <string name="stadium">Stamford Bridge</string>
</resources>
