<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:contentScrim="?attr/colorPrimary">
            <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/player_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:title=" "
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">
            <TextView
                    android:text="@string/weight_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/player_name"/>
            <TextView
                    android:text="@string/height_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight"/>
            <TextView
                    android:text="@string/_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_weight"
                    app:layout_constraintStart_toStartOf="@+id/tv_weight"
                    android:layout_marginTop="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_weight"
                    app:layout_constraintEnd_toEndOf="@+id/tv_weight"
                    android:textSize="25sp" android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/_75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_height"
                    app:layout_constraintBaseline_toBaselineOf="@+id/player_weight"
                    app:layout_constraintEnd_toEndOf="@+id/tv_height"
                    app:layout_constraintStart_toStartOf="@+id/tv_height" android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_position"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"/>
            <TextView
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_description"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider4" android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="20dp"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="368dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/player_height"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>
            <View
                    android:id="@+id/divider4"
                    android:layout_width="368dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/player_position"/>
            <TextView
                    android:text="@string/nameplayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_name"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>